# padne

./: .gitignore  README.md  asv.conf.json  padne.spec  pyproject.toml
.github/actions/setup-padne/: action.yml
.github/workflows/: build-binary.yaml  build-docs.yaml  deploy-nightly.yaml  release.yaml  run-benchmarks.yaml  run-tests.yaml  test-pipx-run.yaml
benchmarks/: asv_system_virtualenv.py  benchmarks.py  copy_test_data.py
docs/: Makefile  conf.py  index.rst  poly.py
docs/_polyversion/templates/: index.html
docs/_templates/sidebar/: versions.html
docs/api/: index.rst
docs/developer/: index.rst  quickstart.rst  structure.rst  testboard.rst  testing-and-benchmarking.rst
docs/installation/: index.rst
docs/user_guide/: directives.rst  index.rst
padne/: __init__.py  cli.py  colormaps.py  context.py  debugutils.py  gerber.py  kicad.py  mesh.py  parallel.py  paraview.py  problem.py  solver.py  tests.py  ui.py  units.py
padne/cpp/: CMakeLists.txt  _cgal.cpp  _mesh.cpp
tests/: conftest.py  test_cli.py  test_colormaps.py  test_context.py  test_kicad.py  test_mesh.py  test_parallel.py  test_paraview.py  test_problem.py  test_sets.py  test_solver.py  test_tests.py  test_ui.py  test_units.py
tests/kicad/: .gitignore
tests/kicad/broken_trace_geometry/: broken_trace_geometry.kicad_pcb  broken_trace_geometry.kicad_pro  broken_trace_geometry.kicad_sch
tests/kicad/castellated_vias/: castellated_vias.kicad_pcb  castellated_vias.kicad_pro
tests/kicad/castellated_vias_internal_cutout/: castellated_vias_internal_cutout.kicad_pcb  castellated_vias_internal_cutout.kicad_pro
tests/kicad/castellated_vias_internal_cutout_aux_origin/: castellated_vias_internal_cutout_aux_origin.kicad_pcb  castellated_vias_internal_cutout_aux_origin.kicad_pro  castellated_vias_internal_cutout_aux_origin.kicad_sch
tests/kicad/complicated_trace_current/: complicated_trace_current.kicad_pcb  complicated_trace_current.kicad_pro  complicated_trace_current.kicad_sch
tests/kicad/degenerate_hole_geometry/: degenerate_hole_geometry.kicad_pcb  degenerate_hole_geometry.kicad_pro  degenerate_hole_geometry.kicad_sch
tests/kicad/detached_via/: detached_via.kicad_pcb  detached_via.kicad_pro
tests/kicad/different_layer_and_net_same_xy/: different_layer_and_net_same_xy.kicad_pcb  different_layer_and_net_same_xy.kicad_pro
tests/kicad/disconnected_components/: disconnected_components.kicad_pcb  disconnected_components.kicad_pro  disconnected_components.kicad_sch
tests/kicad/empty_via/: empty_via.kicad_pcb  empty_via.kicad_pro  empty_via.kicad_sch
tests/kicad/floating_copper/: floating_copper.kicad_pcb  floating_copper.kicad_pro  floating_copper.kicad_sch
tests/kicad/floating_copper_on_different_layer/: floating_copper_on_different_layer.kicad_pcb  floating_copper_on_different_layer.kicad_pro  floating_copper_on_different_layer.kicad_sch
tests/kicad/footprints.pretty/: DG250-3.5-24P.kicad_mod  ProbePoint.kicad_mod
tests/kicad/ldo/: ldo.kicad_pcb  ldo.kicad_pro  ldo.kicad_sch
tests/kicad/long_trace/: long_trace.kicad_pro  long_trace.kicad_sch
tests/kicad/long_trace_current/: long_trace_current.kicad_pro  long_trace_current.kicad_sch
tests/kicad/long_trace_current_custom_conductivity/: long_trace_current_custom_conductivity.kicad_pro  long_trace_current_custom_conductivity.kicad_sch
tests/kicad/long_trace_esr/: long_trace_esr.kicad_pcb  long_trace_esr.kicad_pro  long_trace_esr.kicad_sch
tests/kicad/many_meshes/: many_meshes.kicad_pcb  many_meshes.kicad_pro
tests/kicad/many_meshes_many_vias/: many_meshes_many_vias.kicad_pcb  many_meshes_many_vias.kicad_pro
tests/kicad/multiline_directive/: multiline_directive.kicad_pro  multiline_directive.kicad_sch
tests/kicad/multipad_coupling/: multipad_coupling.kicad_pcb  multipad_coupling.kicad_pro  multipad_coupling.kicad_sch
tests/kicad/nested_schematic/: nested_schematic.kicad_pro  nested_schematic.kicad_sch
tests/kicad/nested_schematic_twoinstances/: nested.kicad_sch  nested_schematic_twoinstances.kicad_pro  nested_schematic_twoinstances.kicad_sch
tests/kicad/overlapping_vias/: overlapping_vias.kicad_pcb  overlapping_vias.kicad_pro  overlapping_vias.kicad_sch
tests/kicad/probe_directive/: probe_directive.kicad_pcb  probe_directive.kicad_pro  probe_directive.kicad_sch
tests/kicad/simple_consumer/: simple_consumer.kicad_pcb  simple_consumer.kicad_pro  simple_consumer.kicad_sch
tests/kicad/simple_geometry/: #auto_saved_files#  simple_geometry.kicad_prl  simple_geometry.kicad_pro  simple_geometry.kicad_sch  ~simple_geometry.kicad_sch.lck
tests/kicad/simple_via/: simple_via.kicad_pcb  simple_via.kicad_pro  simple_via.kicad_sch
tests/kicad/small_arcs/: small_arcs.kicad_pcb  small_arcs.kicad_pro  small_arcs.kicad_sch
tests/kicad/test_set_1/: cal_trace_200um.kicad_sch  fp-lib-table  frame.slvs  gate.kicad_sch  power_input.kicad_sch  test_set_1.kicad_pcb  test_set_1.kicad_pro  test_set_1.kicad_sch
tests/kicad/tht_component/: tht_component.kicad_pcb  tht_component.kicad_pro  tht_component.kicad_sch
tests/kicad/two_big_planes/: two_big_planes.kicad_pcb  two_big_planes.kicad_pro  two_big_planes.kicad_sch
tests/kicad/two_lumped_elements_one_pad/: two_lumped_elements_one_pad.kicad_pcb  two_lumped_elements_one_pad.kicad_pro  two_lumped_elements_one_pad.kicad_sch
tests/kicad/unconnected_via/: unconnected_via.kicad_pcb  unconnected_via.kicad_pro  unconnected_via.kicad_sch
tests/kicad/unterminated_current_loop/: unterminated_current_loop.kicad_pcb  unterminated_current_loop.kicad_pro  unterminated_current_loop.kicad_sch
tests/kicad/via_in_pad/: via_in_pad.kicad_pcb  via_in_pad.kicad_pro  via_in_pad.kicad_sch
tests/kicad/via_tht_4layer/: via_tht_4layer.kicad_pcb  via_tht_4layer.kicad_pro  via_tht_4layer.kicad_sch
tests/kicad/voltage_source_into_current_sink/: voltage_source_into_current_sink.kicad_pcb  voltage_source_into_current_sink.kicad_pro  voltage_source_into_current_sink.kicad_sch
tests/kicad/voltage_source_multipad_degeneration/: voltage_source_multipad_degeneration.kicad_pcb  (+2 more)
(+1 files in other folders)
