[build-system]
# Minimum requirements for the build system to execute.
requires = ["scikit-build-core>=0.10", "pybind11>=3", "setuptools>=80.0.0", "setuptools-scm>=8", "wheel"]
build-backend = "scikit_build_core.build"

[project]
# Core project metadata (PEP 621)
# See: https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "padne"
dynamic = ["version"]
description = "A DC power delivery network analyzer for KiCad"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [
    { name = "Josef Gajdusek", email = "atx@atx.name" }
]
keywords = [
    "pcb", "kicad", "power delivery network", "pdn", "analysis",
    "fem", "finite element method", "simulation",
    "electronics", "cad", "ecad",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed"
]

dependencies = [
    "lxml>=5.0.0",
    "numpy>=2.0.0",
    "pygerber>=2.4.3",
    "PySide6>=6.8.0",
    "PyOpenGL>=3.0.0",
    "scipy>=1.15.0",
    "sexpdata>=1.0.2",
    "shapely>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]
# docs = [
#     "sphinx",
# ]

# Project URLs (Optional)
[project.urls]
Homepage = "https://github.com/atx/padne"
Issues = "https://github.com/atx/padne/issues"
# Documentation = "https://padne.readthedocs.io" # Example

# Entry points (Optional) - e.g., for command-line scripts
[project.scripts]
padne = "padne.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["padne*"]

[tool.scikit-build]
cmake.source-dir = "padne/cpp"
cmake.args = ["-DCMAKE_EXPORT_COMPILE_COMMANDS=ON"]

wheel.packages = ["padne"]
build-dir = "build/{wheel_tag}"

install.strip = false

# This extracts the version from git tags using setuptools_scm
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
write_to = "padne/_version.py"
